Fixed issues with bucket logging send where there is no logging
