# resources/views.go
@@ -561,12 +561,10 @@ func getResourceViewSchema() map[string]*schema.Schema {
 						Type:          schema.TypeString,
 						ConflictsWith: codegen_configs.GetResourceByName("BucketLogging").GetConflictingFields("prefix"),
 
-						Computed:    false,
+						Computed:    true,
 						Optional:    true,
 						Sensitive:   false,
 						Description: `(Valid for versions: 5.2.0) Log line prefix to add`,
-
-						Default: "",
 					},
 
 					"key_format": &schema.Schema{
@@ -584,6 +582,26 @@ func getResourceViewSchema() map[string]*schema.Schema {
 					},
 				},
 			},
+		},
+
+		"has_bucket_logging_destination": &schema.Schema{
+			Type:          schema.TypeBool,
+			ConflictsWith: codegen_configs.GetResourceByName("View").GetConflictingFields("has_bucket_logging_destination"),
+
+			Computed:    true,
+			Optional:    true,
+			Sensitive:   false,
+			Description: `(Valid for versions: 5.2.0) `,
+		},
+
+		"has_bucket_logging_sources": &schema.Schema{
+			Type:          schema.TypeBool,
+			ConflictsWith: codegen_configs.GetResourceByName("View").GetConflictingFields("has_bucket_logging_sources"),
+
+			Computed:    true,
+			Optional:    true,
+			Sensitive:   false,
+			Description: `(Valid for versions: 5.2.0) `,
 		},
 
 		"abac_tags": &schema.Schema{
@@ -1098,6 +1116,30 @@ func ResourceViewReadStructIntoSchema(ctx context.Context, resource api_latest.V
 		diags = append(diags, diag.Diagnostic{
 			Severity: diag.Error,
 			Summary:  "Error occured setting value to \"bucket_logging\"",
+			Detail:   err.Error(),
+		})
+	}
+
+	tflog.Info(ctx, fmt.Sprintf("%v - %v", "HasBucketLoggingDestination", resource.HasBucketLoggingDestination))
+
+	err = d.Set("has_bucket_logging_destination", resource.HasBucketLoggingDestination)
+
+	if err != nil {
+		diags = append(diags, diag.Diagnostic{
+			Severity: diag.Error,
+			Summary:  "Error occured setting value to \"has_bucket_logging_destination\"",
+			Detail:   err.Error(),
+		})
+	}
+
+	tflog.Info(ctx, fmt.Sprintf("%v - %v", "HasBucketLoggingSources", resource.HasBucketLoggingSources))
+
+	err = d.Set("has_bucket_logging_sources", resource.HasBucketLoggingSources)
+
+	if err != nil {
+		diags = append(diags, diag.Diagnostic{
+			Severity: diag.Error,
+			Summary:  "Error occured setting value to \"has_bucket_logging_sources\"",
 			Detail:   err.Error(),
 		})
 	}
